crates/phynix-parse/tests/stmt/snapshots/tests__stmt__echo__echo_no_semicolon_at_end_of_file.snap
---
source: crates/phynix-parse/tests/stmt/echo.rs
assertion_line: 15
expression: script
---
items:
  - Echo:
      exprs:
        - IntLiteral:
            value: 1
