crates/phynix-parse/tests/stmt/snapshots/tests__stmt__echo__echo_no_semicolon_before_close_tag.snap
---
source: crates/phynix-parse/tests/stmt/echo.rs
assertion_line: 20
expression: script
---
items:
  - Echo:
      exprs:
        - IntLiteral:
            value: 1
