crates/phynix-parse/tests/stmt/snapshots/tests__stmt__echo__echo_simple.snap
---
source: crates/phynix-parse/tests/stmt/echo.rs
assertion_line: 5
expression: script
---
items:
  - Echo:
      exprs:
        - IntLiteral:
            value: 1
